--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -33,3 +33,12 @@ $path: "/public/images/";
 .infographic {
   width: 100%;
 }
+
+#global-header {
+  #logo {
+    background: none;
+    img {
+      display: none;
+    }
+  }
+}
